--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite --host",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "lil-gui": "^0.17.0",
+    "vite": "^4.0.0"
   },
   "dependencies": {
-    "next": "14.2.14",
-    "react": "^18",
-    "react-dom": "^18",
-    "three": "^0.169.0"
+    "events": "^3.3.0",
+    "gsap": "^3.11.4",
+    "sass": "^1.58.1",
+    "three": "^0.149.0"
   }
 }
