--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "events": "^3.3.0",
     "gsap": "^3.11.4",
+    "next": "^14.2.14",
     "sass": "^1.58.1",
     "three": "^0.149.0"
   }
